lint: apply lint

--- a/Pragmatic-Programmer/1.md
+++ b/Pragmatic-Programmer/1.md
@@ -1,13 +1,14 @@
 # 達人の哲学
 
 ## 常人と達人プログラマーの違い
+
 - 問題に対するアプローチとその解決手段についての考え方、スタイル、哲学
   - 達人プログラマ０は、眼の前の問題を考えるだけでなく、常に、その問題を大きなコンテキストで捉え、常に物事の大局を見据えようとする
 - 行うこと全てについての責任を全うする
   - 責任を追うことによって、怠慢によるプロジェクトの崩壊を防げるようになる
 
-
 ## あなたの人生
+
 - 何かを改善しようと努力し続ける
   - いつまでもずるずると改善努力を続けようとしてはいけない
 - テクノロジーについて行けていないのであれば、勤務時間外に学習する。自身への投資だから勤務時間外に行うのが妥当
@@ -15,14 +16,16 @@
 ## 猫がソースコードを食べちゃった
 
 ### チームにおける信頼
+
 - チームにおいて、自身を信用してもらい、自身はチームメンバーを当てにできる必要がある
 
 ### 責任を持つこと
+
 - 責任については前向きに考えるべき
 - 結果に対する責任を負う場合、それについて実際に責任を取れることが求められる
   - 過ちやミスを犯した場合、そのことを正直に認め、採り得る選択肢の提案を試みる
   - 言い訳するのではなく、ソリューションを提供するのは自分だけの役割
-- __いい加減な言い訳よりも対策を用意すること__
+- **いい加減な言い訳よりも対策を用意すること**
 - 悪いニュースを報告しに行く前に何かできることはないか？
   - 聞いた側が何を質問するか予想できる場合はその手間を省いてあげる
   - 弁解の代わりに対策を提案
@@ -46,28 +49,33 @@
     - ダメージが広がるのを防ぎ、状況を認識していることを明確にするためにアクションを起こす
 
 ## 石のスープとゆでガエル
+
 - システムの完成目前であれば、システムに必要なものと方法がはっきりと見えていることがある。ただし、取り組み前の承認を得る段階で足止めを食らってあっけにとられることがある
   - 「疲労の開始」：皆が自らのリソースを守ろうとする
   - ここで、道理にかなった要求を考え、要求を引き出せるようそれなりのものを作り上げる
     - 未来を少し垣間見せるだけでみんな賛同してくれる
-- __大きな構想を忘れないようにする__
+- **大きな構想を忘れないようにする**
   - 常に大きな視点でものを見て、周囲で何が起こっているのか注意する
 
 ## 十分に良いソフトウェア
+
 - 「十分に良い」という言葉にはコードがいい加減/不完全という意味は含まれていない
 - 「十分に良いか」を判断するためのプロセスにユーザを参加させると判断がつきやすい
 
 ### トレードオフにユーザを巻き込む
+
 - ユーザーからの要求を無視してプログラムに新機能を追加したり、コードをさらに磨き上げるのはプロフェッショナルとは言えない
 - 開発しているシステムのスコープと品質はシステム要求の一部として議論されていなければならない
-- __要求品質を明確にすること__
+- **要求品質を明確にすること**
 - 多くのユーザにとっては 1年先にしか入手できないリッチな機能を満載したソフトウェア < 今日入手できる仕上がりの粗いソフトウェア
 
 ### やめ時を知る
+
 - 十分に良いプログラムを飾り立て、洗練させすぎて台無しにしては行けない
 - あるべき状態で作業を中断して、しばらくその状態にしておく
 
 ## あなたの知識ポートフォリオ
+
 - ソフトウェア開発に関する知識資産は有効期限付き
 - 知識ポートフォリオへの投資を行う
   - 投資の管理のコツは自分でやってみて週間にすること
@@ -80,9 +88,10 @@
 - リスクを管理：技術という卵を全て1つの籠の中に入れては行けない。習得する技術を分散させることでリスク管理
 - 安値で買い、高値で売る：将来注目される技術を、それが普及する前に学んでおくと吉。難しいことだが報酬は期待できる
 - 見直しと再配分をする：定期的に身につけようとする技術を見直す。技術の進化は早いので、今身につけようとしている技術はもう廃れ気味かも知れない
-- __知識ポートフォリオに対して定期的な投資を行う__
+- **知識ポートフォリオに対して定期的な投資を行う**
 
 ### ゴール
+
 - 毎年少なくとも言語を1つ学習する
 - 月に1冊のペースで技術書を読む：現在取り組んでいるプロジェクトに関する興味深い話題を扱っている技術書を読むと吉
 - 技術書以外の書籍を読む
@@ -93,7 +102,8 @@
 - 新しい言語、技術に慣れたのであれば、立ち止まらず別のものにトライ
 
 ### 批判的な考え方
-- __見聞きした物事を批判的な目で分析する__
+
+- **見聞きした物事を批判的な目で分析する**
 - 「5つのなぜ」を問う：「なぜ？」と問うことで問題を深く掘り下げることができる
 - 誰にメリットがあるのか？：「利益の流れを追う」ことは何かを分析する上で非常に有効
 - コンテキストは何か？：「万能な解決策」など存在せず、解決策はコンテキストによって違う。ベストプラクティスとは誰にとってベストなのか？ということに目を配ってみる
@@ -101,50 +111,60 @@
 - なぜこれが問題なのか？
 
 ## 伝達しよう
+
 - 素晴らしいアイデア、洗練されたコード、達人的な思考ができても他人に伝達することができなければ、それは究極の不毛
-- __自然言語をもう一つのプログラミング言語として考える__
+- **自然言語をもう一つのプログラミング言語として考える**
 
 ### 聞き手のことを知る
+
 - 聞き手のニーズ、興味、能力を理解する
 - 重要なのはフィードバック。ただ質問を待ち受けるだけでなく、こちらから質問する
 
 ### 言いたいことを知る
+
 - まず、自身が言いたいことを練り上げてその概要を書き出す
 - その後、「これで言いたいことの意味が聞き手にうまく伝わるだろうか？」と地震に問いかける
 
 ### タイミングを選ぶ
+
 - 聞き手が聞きたいことを理解するという流れには、聞き手の優先順位を理解する必要がある
   - 聞き手が忙しい時に聞いても適切な回答が返ってこない可能性がある
   - 聞き手が伝えたい内容に関心を持っていると確信できる時に伝えると、話をこれ以上ないくらい理解してくれる
 
 ### スタイルを選ぶ
+
 - 聞き手にあった伝え方をするのも大事。聞き手によって、「事実のみ」を知りたい人、様々な話題を細かく聞きたい人がいる
   - その分野に対する聞き手のスキルレベルや経験を加味する
 
 ### 見栄えを良くする
+
 - 見栄えの良い伝達手段を選ぶ
 - 一度書いたら見栄えをすぐに変更できる Markdown 記法がおすすめ
 
 ### 聞き手を巻き込む
+
 - 重要なドキュメントを作成している場合、ドキュメントの草安段階からユーザーを巻き込むようにする。
 - フィードバックを受け付け、知識を借りる
 
 ### 聞き手になる
+
 - 人に聞いて欲しいなら、自分も聞き手になる
 
 ### 相手の立場になる
+
 - 質問を受けた場合、きちんと返答する
 - その場で適切な回答ができないなら、「後で連絡します」でもいいので常に返信する
-- __伝える事柄と伝える方法は車の両車輪だと考える__
-
+- **伝える事柄と伝える方法は車の両車輪だと考える**
 
 ### ドキュメントとコードをまとめる
+
 - 達人プログラマーはドキュメントを開発プロセス全体とは切っても切り離せない重要なパーツだと考えている
 - コードに対して適用する実践的原則は「全て」ドキュメントにも適用すべき
-- __ドキュメントは付け足すものではなく、作り上げるものである__
+- **ドキュメントは付け足すものではなく、作り上げるものである**
 - コメントは「なぜこれが必要なのか」、目的とゴールの記述に留めておくべき
 
 ### オンラインでのコミュニケーション
+
 - 「送信」ボタンを押す前に精読
 - スペルチェッカーにかけるとともに、自動補正機能によっておかしな修正がなされていないかチェック
 - 引用は最小限に抑える
