--- a/Software Engineering at Google/12_ユニットテスト.md
+++ b/Software Engineering at Google/12_ユニットテスト.md
@@ -26,11 +26,12 @@
 - Google 規模ではこのようなテストは死活問題（全員が全てのコードリポジトリのSTestを実行するので。モノレポなので）
 - 変化しないテスト = 脆いテストになり得ない、のが理想
 - テストが変化してほしくないタイミング
-    - リファクタリング：システムのI/Fを変えずに内部をリファクタリングする場合、システムのテストは変かすべきでない。変化してしまう場合、システムの挙動に影響するリファクタになってしまっているか、テストが適切な抽象化レベルで書かれていなかったことになる
-    - 新機能：既存の挙動は影響を受けない状態にとどまるべき。新機能を扱うために既存のテストの方をどこか変更しなければいけない場合、何かが間違っている
-    - バグ修正：バグ修正も既存のテストへの更新を要するべきでない
-- つまり、テストを追加する改修は**「システムの挙動に破壊的変更を加える場合」**のみであるべき
-- ~~~
+  - リファクタリング：システムのI/Fを変えずに内部をリファクタリングする場合、システムのテストは変かすべきでない。変化してしまう場合、システムの挙動に影響するリファクタになってしまっているか、テストが適切な抽象化レベルで書かれていなかったことになる
+  - 新機能：既存の挙動は影響を受けない状態にとどまるべき。新機能を扱うために既存のテストの方をどこか変更しなければいけない場合、何かが間違っている
+  - バグ修正：バグ修正も既存のテストへの更新を要するべきでない
+- つまり、テストを追加する改修は\*\*「システムの挙動に破壊的変更を加える場合」\*\*のみであるべき
+- ```
+  ```
 
 ### 公開API経由のテスト
 
@@ -43,27 +44,27 @@
 
 - メソッド・クラスが1つか2つの**別のクラスを支援するためだけに存在するのであれば**（ヘルパークラスになっているのであれば）、**それ自体はユニットと扱うべきでない。支援対象のクラスを通じてテストされるべき**
 - パッケージまたはクラスが**誰からでもアクセス可能に設計されているのであれば、直接テストされるべきユニットの構成要素**となる
-**テスト時はユーザーがクラス・メソッドにアクセスする場合と同じ方法でアクセスする**
+  **テスト時はユーザーがクラス・メソッドにアクセスする場合と同じ方法でアクセスする**
 - ある範囲の文脈内で有用な一般的な機能を提供するように設計されている（サポートライブラリ）ならユニットとみなされるべき
-テストはこのユニットの利用者側とこのユニット自体で被る部分が出てくるが、これは許容される（網羅性重視）
+  テストはこのユニットの利用者側とこのユニット自体で被る部分が出てくるが、これは許容される（網羅性重視）
 
 ## 相互作用ではなく、状態をテスト
 
 - **何が呼び出されたか（インタラクション）ではなく、APIを実行した結果、状態がどうなったか（ステート）を検証する方が堅牢なテスト**になる
-    - インタラクションテストに問題がある場合、最もあり得るのはモッキングフレームワークへの過度な依存
-    - ↑を嫌うため、できるだけモックを使わずに本物のオブジェクトを使うことを意識している
-    - モックを使うべき箇所については他の章で解説
+  - インタラクションテストに問題がある場合、最もあり得るのはモッキングフレームワークへの過度な依存
+  - ↑を嫌うため、できるだけモックを使わずに本物のオブジェクトを使うことを意識している
+  - モックを使うべき箇所については他の章で解説
 
 ### 明確なテストを書く
 
 - テストが失敗する理由
-    - テスト対象システムに問題があるか不完全←これを早期発見するのがテストの役割
-    - テストに欠陥がある。テストが誤った形で作成されている。既存のテストが誤った形だった場合、そのテストは脆いテストである
+  - テスト対象システムに問題があるか不完全←これを早期発見するのがテストの役割
+  - テストに欠陥がある。テストが誤った形で作成されている。既存のテストが誤った形だった場合、そのテストは脆いテストである
 - テストで落ちた時、↑のどちらであるかを確定させるための助けとなるのがテストの「明確さ」
 - 明確なテスト：存在目的・失敗理由が失敗の原因を究明するエンジニアから見てたちどころに明確となるテストのこと。テストが明確であると、テストをドキュメントしたり、新しいテストの基礎の役目をより円滑に果たしたりといった利点ももたらす
 - テストが明確性を達成するのを助ける属性
-    - 完全性：読者が必要とする全情報をテストが含んでいるか
-    - 簡潔性：無関係な情報がテストに含まれていないか
+  - 完全性：読者が必要とする全情報をテストが含んでいるか
+  - 簡潔性：無関係な情報がテストに含まれていないか
 
 ```java
 @Test
@@ -88,8 +89,8 @@ public void shouldPerformAddition() {
 ```
 
 - 完全性・簡潔性を達成するために上記の例のように DRY 原則に反することもある。
-ただ、テストを読む上では価値のある書き方となっている
-（プロダクションコードのようにテストコードも扱うが、実際に本番で動作しないコードには DRY 原則を適応しない手もあるということ）
+  ただ、テストを読む上では価値のある書き方となっている
+  （プロダクションコードのようにテストコードも扱うが、実際に本番で動作しないコードには DRY 原則を適応しない手もあるということ）
 
 ### メソッドではなく、挙動をテスト
 
@@ -139,17 +140,17 @@ public void displayTransactionResults_showsLowBalanceWarning() {
 挙動駆動なテストの書き方
 
 - given when then のように何を用意して、どういった時に何が起こるかをテストする
-    - spock とかはこれをサポートしている
+  - spock とかはこれをサポートしている
 - テストの名称はテスト対象の挙動を含める。優れた名称は、システムに対して行われる動作と期待される結果の両方を説明する
-    - jest とかはこの形式
-    - 実行される関数名 ⇒ 期待される挙動（`should~~~` ）という階層構造でテスト設計ができる
-        - 困ったら `should` をテスト名に含めるといい
-    - 実際に動作するコードより冗長だが、テストは何を検証しているかを明確にするべきなので、冗長さは許容される
+  - jest とかはこの形式
+  - 実行される関数名 ⇒ 期待される挙動（`should~~~` ）という階層構造でテスト設計ができる
+    - 困ったら `should` をテスト名に含めるといい
+  - 実際に動作するコードより冗長だが、テストは何を検証しているかを明確にするべきなので、冗長さは許容される
 - テストにロジックを入れないこと
-    - if や for をテストに含めない
-    - 気の利いたロジックより、単純なコードで突き通すべき。ある程度の重複も意味の分かりやすさのために許容する
+  - if や for をテストに含めない
+  - 気の利いたロジックより、単純なコードで突き通すべき。ある程度の重複も意味の分かりやすさのために許容する
 - テストが失敗するときのメッセージを明確にするようにテストを設計する
-    - True であることを保証するのでなく、ある値になることを保証するようにすると、テストが失敗した時に想定した値と違うことがわかりやすい
+  - True であることを保証するのでなく、ある値になることを保証するようにすると、テストが失敗した時に想定した値と違うことがわかりやすい
 
 ## テストを書くうえでその他のテクニック
 
