--- a/Software Engineering at Google/14_大規模テスト.md
+++ b/Software Engineering at Google/14_大規模テスト.md
@@ -19,26 +19,26 @@
 
 - 本番環境は忠実性が最も高い
 - ↑だが、本番環境はテストには使えない場合も多いので、検証用の環境を使うことも多い
-    - 検証用の環境の規模が本番に近ければ近いほど、忠実性は担保できるが障害のリスクも大きい
+  - 検証用の環境の規模が本番に近ければ近いほど、忠実性は担保できるが障害のリスクも大きい
 - ユニットテストの入力は手作業で作成されるため、テストの作者のバイアスによって入力は固定化され、忠実性は低くなりがち。
 
 ■ ユニットテストでは不足な部分
 
 - 忠実でないテストダブル
-    - モックやスタブの挙動が忠実でないと、テストの忠実性も損なわれる
-    - フェイクを使うとこの懸念は相当軽減される
+  - モックやスタブの挙動が忠実でないと、テストの忠実性も損なわれる
+  - フェイクを使うとこの懸念は相当軽減される
 - 設定
-    - DBへの接続設定などで問題があることにユニットテストでは気づけない
-    - Google では設定もバージョンコントロールに入れること。大規模テストに設定や設定変更を含めることができるため。
-    - Google での**大規模障害の原因のトップは設定変更**が起因している
-    - 設定はシステムとは別のコードで記述されることなどから、テストがシステムの挙動を検証するよりも難しい
+  - DBへの接続設定などで問題があることにユニットテストでは気づけない
+  - Google では設定もバージョンコントロールに入れること。大規模テストに設定や設定変更を含めることができるため。
+  - Google での**大規模障害の原因のトップは設定変更**が起因している
+  - 設定はシステムとは別のコードで記述されることなどから、テストがシステムの挙動を検証するよりも難しい
 - 負荷がかかると起こる問題
 - 予期しない挙動・入力・副作用
-    - ユニットテストは人のバイアスがかかった入力・予想される挙動でのみテスト可能
-    - Hyrumの法則：[https://www.hyrumslaw.com/](https://www.hyrumslaw.com/)
-    - 目に見える挙動のうち、公開APIで具体的な指定のないもの全てについてテストすることはユニットテストだけでは不十分
+  - ユニットテストは人のバイアスがかかった入力・予想される挙動でのみテスト可能
+  - Hyrumの法則：<https://www.hyrumslaw.com/>
+  - 目に見える挙動のうち、公開APIで具体的な指定のないもの全てについてテストすることはユニットテストだけでは不十分
 - 真空効果
-    - ユニットテストでは対象としている箇所の変更によるバグしか検知できない
+  - ユニットテストでは対象としている箇所の変更によるバグしか検知できない
 
 ■ 大規模テストの課題
 
@@ -49,14 +49,14 @@
 
 - テスト対象システム
 - テストデータ
-    - 手動、本番からのコピーまたは標本抽出されたデータのいずれかが使える
+  - 手動、本番からのコピーまたは標本抽出されたデータのいずれかが使える
 - 検証方法
-    - 手動
-        - 人によるチェック
-    - アサーション
-        - システムの意図された挙動についての明示的なチェック
-    - A/B 比較
-        - 人による比較チェック。意図された挙動は明示的に定義されていない
+  - 手動
+    - 人によるチェック
+  - アサーション
+    - システムの意図された挙動についての明示的なチェック
+  - A/B 比較
+    - 人による比較チェック。意図された挙動は明示的に定義されていない
 
 ## 大規模テストの類型
 
@@ -95,8 +95,8 @@
 ### 探索的テスト
 
 - 以下の特徴がある
-    - 新規のユーザーシナリオを施行して、不審な挙動を探す
-    - システムを通る新しいパス、どの挙動が期待される挙動または直感的な挙動から外れているか、セキュリティ脆弱性が存在するかをユーザー/テスターによって試験
+  - 新規のユーザーシナリオを施行して、不審な挙動を探す
+  - システムを通る新しいパス、どの挙動が期待される挙動または直感的な挙動から外れているか、セキュリティ脆弱性が存在するかをユーザー/テスターによって試験
 - システム：本番 or staging
 - データ：本番環境か既知のテスト領域
 - 検証：手動
@@ -108,10 +108,10 @@
 ### A/B差分リグレッションテスト
 
 - Google における大規模テストの最も一般的な形式
-    - ユーザーから見る製品の挙動を検証するための方法であるため
+  - ユーザーから見る製品の挙動を検証するための方法であるため
 - 変種
-    - A/Aテスト：非決定性の挙動・ノイズ・信頼不能性を特定、特定したそれらの影響をA/B差分テストから除く
-    - A/B/Cテスト：複数のバージョンで差分を検証
+  - A/Aテスト：非決定性の挙動・ノイズ・信頼不能性を特定、特定したそれらの影響をA/B差分テストから除く
+  - A/B/Cテスト：複数のバージョンで差分を検証
 - システム：クラウド上にデプロイされ分離されている2つの環境
 - データ：本番環境などの環境から抽出したもの
 - 検証：A/B差分比較
